front_end/components/Pages/CalendarPage/subcomponents/DayWindow/DayWindow.module.css
:root {
    --row-size: 10rem;
    --column-size: auto;
}

.CenterContainer {
    display: flex;
}

.DayContainer { 
    display: flex;
    margin: 0 auto;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 50rem;
    
}

.DayRoot {
    height: 50rem;
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    background-color: #b4b9e0;
    border-radius: 15px; /* Desired border radius */
    display: inline-block; /* Adjust as needed */
    margin: 0 auto;
    padding-top: 0.5rem;
    padding-bottom: 1rem;
    scrollbar-width: thin;
    scrollbar-color: #4c4f63 transparent; 
    
}


.DayRoot::-webkit-scrollbar {
    width: 9px;
  }


.DayRoot::-webkit-scrollbar-track {
    background: transparent;
}


.DayRoot::-webkit-scrollbar-thumb {
    background-color: #4c4f63;
    border-radius: 20px;
    border: transparent;
}


.DayWindow {
    display: grid;
    grid-template-rows: repeat(23, var(--row-size) 0.2rem);
    grid-template-columns: var(--column-size);
    border-radius: 10px;
    margin: 0;
    padding: 0;
    place-items: center center;
}

